; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_msg.c_test_terminal_level.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_msg.c_test_terminal_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@MSGL_STATUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_log*, i32)* @test_terminal_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_terminal_level(%struct.mp_log* %0, i32 %1) #0 {
  %3 = alloca %struct.mp_log*, align 8
  %4 = alloca i32, align 4
  store %struct.mp_log* %0, %struct.mp_log** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.mp_log*, %struct.mp_log** %3, align 8
  %7 = getelementptr inbounds %struct.mp_log, %struct.mp_log* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp sle i32 %5, %8
  br i1 %9, label %10, label %27

10:                                               ; preds = %2
  %11 = load %struct.mp_log*, %struct.mp_log** %3, align 8
  %12 = getelementptr inbounds %struct.mp_log, %struct.mp_log* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %10
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @MSGL_STATUS, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = call i64 (...) @terminal_in_background()
  %23 = icmp ne i64 %22, 0
  br label %24

24:                                               ; preds = %21, %17
  %25 = phi i1 [ false, %17 ], [ %23, %21 ]
  %26 = xor i1 %25, true
  br label %27

27:                                               ; preds = %24, %10, %2
  %28 = phi i1 [ false, %10 ], [ false, %2 ], [ %26, %24 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i64 @terminal_in_background(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
